fixed overlap with publications in sidemenu

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ General CSS
 
 #content {
 	width: 750px;
-	padding-top: 140px;
+	padding: 140px 0 0 80px;
 	margin: 0 auto;
 	z-index: 1;
 }
